--- a/public/style/form.css
+++ b/public/style/form.css
@@ -1,77 +1,42 @@
-.form-style-2{
-    padding: 20px 12px 10px 20px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-	font-size: 13px;
-}
-/* .form-style-2-heading{
-	font-weight: bold;
-	font-style: italic;
-	border-bottom: 2px solid #ddd;
-	margin-bottom: 20px;
-	font-size: 15px;
-	padding-bottom: 3px;
-} */
-.form-style-2 label{
-	display: block;
-	margin: 0px 0px 15px 0px;
-}
-.form-style-2 label > span{
-	width: 100px;
-	float: left;
-	padding-top: 8px;
-	padding-right: 5px;
-}
-.form-style-2 span.required{
-	color:red;
-}
-/* .form-style-2 .tel-number-field{
-	width: 40px;
-	text-align: center;
-} */
-.form-style-2 input.input-field, .form-style-2 .select-field{
-	width: 48%;	
-}
-.form-style-2 input.input-field, 
-/* .form-style-2 .tel-number-field,  */
-.form-style-2 .textarea-field, 
- .form-style-2 .select-field{
+input[type=text],input[type=email], select {
+	width: 100%;
+	padding: 12px 20px;
+	margin: 8px 0;
+	display: inline-block;
+	border: 1px solid #ccc;
 	box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	border: 1px solid #C2C2C2;
-	box-shadow: 1px 1px 4px #EBEBEB;
-	-moz-box-shadow: 1px 1px 4px #EBEBEB;
-	-webkit-box-shadow: 1px 1px 4px #EBEBEB;
-	border-radius: 3px;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	padding: 7px;
-	outline: none;
 }
-/* .form-style-2 .input-field:focus, 
-.form-style-2 .tel-number-field:focus, 
-.form-style-2 .textarea-field:focus,  
-.form-style-2 .select-field:focus{
-	border: 1px solid #0C0;
-} */
-.form-style-2 .textarea-field{
-	height:100px;
-	width: 55%;
-}
-.form-style-2 div.submit{
-    text-align: right;
-}
-.form-style-2 input[type=submit],
-.form-style-2 input[type=button]{
-    border: 1px solid black;
-    border-radius: 2px;
-    padding: 1em;
-    color: black;
-    font-size: 14px;
-    margin-right: 1em;
-    background-color: transparent;
-}
-.form-style-2 input[type=submit]:hover,
-.form-style-2 input[type=button]:hover{
+  
+input[type=submit] {
+	width: 100%;
+	background-color: #7030a0;;
+	color: white;
+	padding: 14px 20px;
+	margin: 8px 0;
+	border: none;
+	border-radius: 4px;
 	cursor: pointer;
+}
+  
+input[type=submit]:hover {
+	background-color: #542579;
+}
+  
+div.card {
+	border-radius: 5px;
+	background-color: #f2f2f2;
+	padding: 20px;
+}
+
+div.flex{
+	display: flex;
+}
+
+.select-input{
+	margin-right: 1em;
+	width: 100px;
+}
+
+.input-radio{
+	margin: 1em 2.5em 1em 0em;
 }
