--- a/views/index.erb
+++ b/views/index.erb
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="card">
         <p class="title">Registration</p>
-        <form action="/" method="POST">
+        <form action="/user-register" method="POST">
             <input type="text" name="phone_number" placeholder="Mobile Number" required>
             <input type="text" name="first_name" placeholder="First name" required>
             <input type="text" name="last_name" placeholder="Last name" required>
