--- a/views/index.erb
+++ b/views/index.erb
@@ -44,7 +44,7 @@
             </form>
             </fieldset>
             <div class="flex">
-               <a class="btn" <%= "style='display: none;'" if @user_valid.nil? %>>Login</a>
+               <a href="/home" class="btn" <%= "style='display: none;'" if @user_valid.nil? %>>Login</a>
             </div>
         </div>
     </div>
